<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_led_strip_component"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_weight="5"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_width="0dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/color_pick_text"
                android:textAlignment="center"/>
            <Spinner
                android:id="@+id/color_picker_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/driver"
                android:textAlignment="center"/>
            <Spinner
                android:id="@+id/driver_picker_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"/>
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pin"
                android:textAlignment="center"/>
            <NumberPicker
                android:id="@+id/led_strip_pin_selector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
